Fixing spacing in markdown

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -511,7 +511,8 @@ html, body {
 
 .single-page > #file {
   margin-top: -40%;
-  padding: 1em;
+  padding: 2em;
+  line-height: 1.3;
 }
 
 .home-intro > #file {
